# intel

./: CMakeLists.txt
include/: BitmapImporter.h  SomeStuff.h
src/: BitmapImporter.cpp  SomeStuff.cpp  main.cpp
